--- a/package.json
+++ b/package.json
@@ -3,19 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts --max_old_space_size=4096 start",
-    "build": "react-scripts --max_old_space_size=4096 build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test"
   },
   "dependencies": {
+    "@capacitor/android": "^4.6.1",
+    "@capacitor/app": "^4.1.1",
+    "@capacitor/core": "^4.6.1",
+    "@capacitor/haptics": "^4.1.0",
+    "@capacitor/ios": "^4.6.1",
+    "@capacitor/keyboard": "^4.1.0",
+    "@capacitor/status-bar": "^4.1.1",
     "@ionic/react": "^6.3.1",
     "dayjs": "^1.11.7",
     "ionicons": "^6.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.3.2"
   },
   "devDependencies": {
+    "@capacitor/assets": "^2.0.4",
+    "@capacitor/cli": "^4.6.1",
     "react-scripts": "5.0.1"
   },
   "eslintConfig": {
